Add coloration of missing and incomplete datas on destable

--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -17611,3 +17611,15 @@ fr: effacer tous les filtres
     no line break in names
 en: no line break in names
 fr: afficher les noms sans saut de ligne
+
+    show first names
+en: show the first names instead of public name
+fr: afficher les prénoms à la place du nom public
+
+    highlight missing data
+en: highlight missing and incomplete data
+fr: surligner les données manquantes ou incomplètes
+
+    edit family on spouse
+en: edit the families by clicking on the date of marriage of the row of one spouses
+fr: modifier les familles en cliquant sur la date de mariage sur la ligne d’un conjoint
