Add back button and title when no more shortest path links

--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -8805,6 +8805,10 @@ pt: link de regresso aos pais
 sv: länk tillbaka till föräldrarna
 tr: ebeveynlere geri bağlantı
 
+    no more
+en: no more
+fr: plus de
+
     link between
 af: mense tussen
 bg: родство между
