revert plural degrees of kinship

--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -5207,8 +5207,8 @@ tr: madalya
     degree of kinship
 co: gradu di parentia
 de: Grad der Elternschaft
-en: degree of kinship
-fr: degré de parenté
+en: degree of kinship/degrees of kinship
+fr: degré de parenté/degrés de parenté
 pt: grau de parentesco
 sv: släktskapsgrad
 tr: akrabalık derecesi
