(wip) add death date when no separation, calculate age of widowing in tooltip

--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -17782,3 +17782,11 @@ fr: modifier la taille des images à
     passing by
 en: passing by
 fr: en passant par
+
+    widower/widow
+en: %s widower %s/%s widow %s
+fr: %s veuf %s/%s veuve %s
+
+    since/for
+en: since/for
+fr: depuis/pendant
