--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -2486,38 +2486,38 @@ de: aufsteigender Grad/absteigender Grad/aufsteigender Grade/absteigender Grade
 en: ascending degree/descending degree/ascending degrees/descending degrees
 fr: degré ascendant/degré descendant/degrés ascendants/degrés descendants
 
-    ancestors
-af: voorouers
-bg: предци
-br: hendadoù
-ca: ascendents
-co: antenati
-cs: předkové
-da: forfædre
-de: Vorfahren
-en: ancestors
-eo: prapatro
-es: ascendientes
-et: esivanemad
-fi: esivanhemmat
-fr: ascendants
-he:   האבות
-is: forfeður
-it: antenati
-lt: protėviai
-lv: senči
-nl: voorouders
-no: forfedre
-oc: ascendents
-pl: przodkowie
-pt: antepassados
-ro: strabuni
-ru: предки
-sk: predkovia
-sl: predniki
-sv: anor
-tr: atalar
-zh: 祖先
+    ancestor/ancestors
+af: /voorouers
+bg: /предци
+br: /hendadoù
+ca: ascendent/ascendents
+co: /antenati
+cs: /předkové
+da: /forfædre
+de: Vorfahre/orfahren
+en: ancestor/ancestors
+eo: /prapatro
+es: /ascendientes
+et: /esivanemad
+fi: /esivanhemmat
+fr: ascendant/ascendants
+he: /האבות
+is: /forfeður
+it: ascendente/ascendenti
+lt: /protėviai
+lv: /senči
+nl: /voorouders
+no: /forfedre
+oc: /ascendents
+pl: /przodkowie
+pt: /antepassados
+ro: /strabuni
+ru: /предки
+sk: /predkovia
+sl: /predniki
+sv: /anor
+tr: /atalar
+zh: /祖先
 
     ancestors (some)
 af: voorsate
